@@ -202,7 +202,7 @@ void CUtil::RemoveExtension(CStdString& strFileName)
     strFileMask = g_stSettings.m_szMyMusicExtensions;
     strFileMask += g_stSettings.m_szMyPicturesExtensions;
     strFileMask += g_stSettings.m_szMyVideoExtensions;
-    strFileMask += ".py|.xml|.milk";
+    strFileMask += ".py|.xml|.milk|.xpr";
 
     // Only remove if its a valid media extension
     if (strFileMask.Find(strExtension.c_str()) >= 0)
